semgrep-core/src/pfff/lang_scala/Parser_scala_recursive_descent.ml
(* Yoann Padioleau, Matthew McQuaid
 *
 * Copyright (C) 2021-2022 R2C
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public License
 * version 2.1 as published by the Free Software Foundation.
 *
 * This library is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the file
 * license.txt for more details.
 *
 *)
open Common
module T = Token_scala
module TH = Token_helpers_scala
module Flag = Flag_parsing
module PI = Parse_info
open Token_scala
open AST_scala
module AST = AST_scala

let logger = Logging.get_logger [ __MODULE__ ]

(*****************************************************************************)
(* Prelude *)
(*****************************************************************************)
(* A recursive-descent Scala parser.
 *
 * This is mostly an OCaml port of the Scala2 parser found in
 * https://github.com/scala/scala/src/compiler/scala/tools/nsc/ast/parser/Parsers.scala
 *
 * alt:
 *  - use Parsers.scala of dotty? but the source is longer, and most of
 *    the code out there is still Scala2 code, so it's better for semgrep
 *    to focus on Scala 2 first.
 *  - use the one in scalameta? The code looks cleaner, but it handles
 *    more constructs because it handles also Scala3 (so it needs to manage
 *    indent/outdent). It might have been a better basis though, because on
 *    a second look (thx to Nathan) the code is far cleaner than Parsers.scala
 *    in the Scala 2 compiler source.
 *
 * Note that parsing Scala is difficult. See the crazy: tag in this file.
 * In some cases, parsing looks very contextual and crazy, because the
 * code looks at the AST built in previous steps to decide what to do
 * (e.g., the code around PatBind), but it's just that the parser
 * is using an LL(1) parsing style, so the parser sometimes accept
 * a more general expression first and later restrict what was possible.
 * In that case I use the not_crazy: tag when I think this could be solved
 * using a LALR(1) parser.
 *
 *
 * See also the newline: tag to see all the places where newlines are handled
 * in a special way.
 *
 * TODO:
 *  - see the AST: tag for what Parsers.scala was doing to build an AST.
 *    I use ast: when I return something from AST_scala.ml to cover the
 *    construct. I don't include the ast: for Nil or EmptyTree where I
 *    usually instead return a None or a [].
 * less:
 *  - see the CHECK: tag for what Parsers.scala was statically checking
 *  - see the STILL for what was TODO but may not be needed in the end as
 *    it seems we can parse most code without handling those
 *
 * Not handled (or partially handled) on purpose for now:
 *  - XML (deprecated constructs anyway)
 *  - symbolic literals (deprecated constructs anyway)
 *  - lots of semantic AST rewriting
 *     * stuff around placeholder '_' and implicit parameters
 *       CHECK: "unbound placeholder paramter"
 *       CHECK: "unbound wildcard type"
 *  - error recovery (skipping parens, braces, etc.)
 *  - advanced error diagnosis: lots of variants (deprecationWarning,
 *    syntaxError, expecting X but got Y, etc)
 *  - position/offset management (just use position info in the token, easier)
 *  - hooks for Scaladoc or IDEs
 *)

(* See also Flag_parsing.debug_parser and Flag_parsing.debug_lexer *)
let debug_newline = ref false

(*****************************************************************************)
(* Types  *)
(*****************************************************************************)

type env = {
  (* imitating the Scala implementation *)
  mutable token : T.token;
  (* a stack of tokens which indicates whether line-ends can be statement
   *  separators also used for keeping track of nesting levels.
   *  We keep track of the closing symbol of a region. This can be
   *  RPAREN    if region starts with '('
   *  RBRACKET  if region starts with '['
   *  RBRACE    if region starts with '{'
   *  ARROW     if region starts with 'case'
   *  STRINGLIT if region is a string interpolation expression starting
   *   with '${' (the STRINGLIT appears twice in succession on the stack iff
   *              the expression is a multiline string literal).
   *)
  mutable sepRegions : T.token list;
  (* not in Scala implementation *)
  mutable rest : T.token list;
  mutable passed : T.token list;
  (* newline: last newline token *)
  mutable last_nl : Parse_info.t option;
  (* for logging *)
  mutable depth : int;
}

let mk_env toks =
  match toks with
  | [] ->
      (* we should at least get an EOF token from the lexer *)
      raise Impossible
  | x :: xs ->
      {
        token = x;
        (* this assumes we will call first nextToken on it *)
        rest = x :: xs;
        passed = [];
        last_nl = None;
        depth = 0;
        sepRegions = [];
      }

(* We sometimes need to lookahead tokens, and call fetchToken and revert;
 * To do that we copy the environment to run fetchToken on a fresh copy. See
 * https://stackoverflow.com/questions/47688111/copy-construction-in-ocaml
 *)
let copy_env env = { env with token = env.token }

(* Trick to use = (called =~= below) to compare tokens *)
let ab = PI.abstract_info
let fb = PI.fake_bracket
let noSelfType = None
let noMods = []

(* crazy? context-sensitive parsing? *)
type location = Local | InBlock | InTemplate
[@@deriving show { with_path = false }]

(* to correctly handle infix operators (in expressions, patterns, and types)*)
type mode = FirstOp | LeftOp | RightOp [@@deriving show { with_path = false }]

(*****************************************************************************)
(* Logging/Dumpers  *)
(*****************************************************************************)
let n_dash n = Common2.repeat "--" n |> Common.join ""

let with_logging funcname f in_ =
  if !Flag.debug_parser then (
    let save = in_.depth in
    in_.depth <- in_.depth + 1;
    let depth = n_dash in_.depth in
    logger#info "%s>%s: %s" depth funcname (T.show in_.token);
    let res = f () in
    (* less: pass in_ ? *)
    logger#info "%s<%s: %s" depth funcname (T.show in_.token);
    in_.depth <- save;
    res)
  else f ()

(*****************************************************************************)
(* Error management  *)
(*****************************************************************************)
let error x in_ =
  let tok = in_.token in
  let info = TH.info_of_tok tok in
  if !Flag.debug_parser then (
    pr2 (T.show tok);
    pr2 x);
  raise (PI.Parsing_error info)

let warning s = if !Flag.debug_parser then pr2 ("WARNING: " ^ s)

(*****************************************************************************)
(* Helpers  *)
(*****************************************************************************)
(* less: assert t1 is not a token with value (s, info) *)
let ( =~= ) t1 t2 = TH.abstract_info_tok t1 =*= TH.abstract_info_tok t2

(* to imitate Parsers.scala *)
let ( ++= ) aref xs = aref := xs @ !aref
let ( += ) aref x = aref := x :: !aref

let id_of_e_opt = function
  | Name (Id id, []) -> Some id
  (* TODO? can this happen? is it because we wrongly parse the self type? *)
  | Name (This (None, ii), []) -> Some (AST.this, ii)
  | ExprUnderscore ii -> Some (AST.wildcard, ii)
  | _ -> None

let param_of_e_opt e =
  match (e, id_of_e_opt e) with
  | _, Some id -> Some (id, None)
  | TypedExpr (e, _, t), None -> (
      match id_of_e_opt e with
      | Some id -> Some (id, Some t)
      | None -> None)
  | _ -> None

let convertToParam tk e =
  match param_of_e_opt e with
  | Some (id, None) -> ParamClassic (AST.basic_param id)
  | Some (id, Some t) ->
      ParamClassic { (AST.basic_param id) with p_type = Some (PT t) }
  | _ ->
      (* CHECK: "not a legal formal parameter" *)
      warning (spf "convertToParam: not handled %s" (AST.show_expr e));
      raise (PI.Parsing_error tk)

let convertToParams tk e =
  match e with
  | Tuple (lb, xs, rb) -> (lb, xs |> List.map (convertToParam tk), rb)
  | _ -> fb tk [ convertToParam tk e ]

let makeMatchFromExpr e =
  match e with
  | BlockExpr (lb, BECases cases, rb) -> CatchCases (lb, cases, rb)
  | _ -> CatchExpr e

(*****************************************************************************)
(* Token helpers  *)
(*****************************************************************************)

(* ------------------------------------------------------------------------- *)
(* looking ahead part 1 *)
(* ------------------------------------------------------------------------- *)

(* was called in.next.token *)
let rec in_next_token xs =
  match xs with
  | [] -> None
  | x :: xs -> (
      match x with
      | Space _
      | Comment _ ->
          in_next_token xs
      | _ -> Some x)

(* ------------------------------------------------------------------------- *)
(* newline: Newline management part1  *)
(* ------------------------------------------------------------------------- *)
(* pad: newlines are skipped in fetchToken but reinserted in insertNL
 * in certain complex conditions.
 *)

(** Adapt sepRegions according to last token.
  * pad: called just at the beginning of nextToken so
  * in_.token = lastToken
*)
let adjustSepRegions lastToken in_ =
  let newRegions =
    match (lastToken, in_.sepRegions) with
    | LPAREN info, xs -> RPAREN info :: xs
    | LBRACKET info, xs -> RBRACKET info :: xs
    | LBRACE info, xs -> RBRACE info :: xs
    | Kcase info, xs -> (
        (* pad: the original code generate different tokens for
         * 'case object' and 'case class' in postProcessToken, I guess
         * to simplify code here. Instead I lookahead here and have
         * a simpler postProcessToken.
         *)

        (* ugly: if 'case' is the first token of the file, it will actually
         * still be in in_.rest because of the way mk_env currently works.
         * so we double check this initial condition here with =*=
         * (on purpose not =~=)
         *)
        let rest =
          match in_.rest with
          | x :: xs when x =*= lastToken -> xs
          | xs -> xs
        in
        match in_next_token rest with
        | Some (Kobject _ | Kclass _) -> xs
        | Some x ->
            if !debug_newline then
              logger#info "found case for arrow, next = %s" (T.show x);
            ARROW info :: xs
        | None -> xs)
    (* pad: the original code does something different for RBRACE,
     * I think for error recovery, and it does not raise an
     * error for mismatch.
     *)
    | (RPAREN _ | RBRACKET _ | RBRACE _), [] ->
        (* stricter: original code just does nothing *)
        error "unmatched closing token" in_
    | ((RPAREN _ | RBRACKET _ | RBRACE _) as x), y :: ys ->
        if x =~= y then ys
        else
          (* stricter: original code just does nothing *)
          error "unmatched closing token" in_
    (* pad: not that an arrow can also be used outside of a case, so
     * here we dont raise an error if we don't find a match.
     *)
    | (ARROW _ as x), y :: ys when x =~= y -> ys
    | _, xs -> xs
  in
  in_.sepRegions <- newRegions;
  ()

(* newline: pad: I've added the ~newlines param to differentiante adding
 * a NEWLINE or NEWLINES *)
let insertNL ?(newlines = false) in_ =
  if !debug_newline then (
    logger#info "%s: %s" "insertNL" (T.show in_.token);
    logger#info "inserting back a newline:%s" (Dumper.dump in_.last_nl));
  match in_.last_nl with
  | None -> error "IMPOSSIBLE? no last newline to insert back" in_
  | Some x ->
      in_.rest <- in_.token :: in_.rest;
      in_.token <- (if newlines then NEWLINES x else NEWLINE x);
      ()

(** Is current token first one after a newline? *)
let afterLineEnd in_ =
  let rec loop passed =
    match passed with
    | x :: xs -> (
        match x with
        | Nl _
        | NEWLINE _
        | NEWLINES _ ->
            true
        | Space _
        | Comment _ ->
            loop xs
        | _ ->
            if !debug_newline then
              logger#info "%s: false because %s" "afterLineEnd" (T.show x);
            false)
    | [] -> false
  in
  loop in_.passed |> fun b ->
  if !debug_newline then
    logger#info "%s: %s, result = %b" "afterLineEnd" (T.show in_.token) b;
  b

(* ------------------------------------------------------------------------- *)
(* Lexing tricks *)
(* ------------------------------------------------------------------------- *)
let postProcessToken _in_ =
  warning "postProcessToken";
  ()

(* ------------------------------------------------------------------------- *)
(* fetchToken *)
(* ------------------------------------------------------------------------- *)
let fetchToken in_ =
  let rec loop aux =
    match in_.rest with
    | [] -> error "IMPOSSIBLE? fetchToken: no more tokens" in_
    | x :: xs -> (
        if !Flag.debug_lexer then logger#info "fetchToken: %s" (T.show x);

        in_.rest <- xs;

        match x with
        | Space _
        | Comment _ ->
            loop (x :: aux)
        (* pad: the newline is skipped here, but reinserted conditionally in
         * insertNL() *)
        | Nl info ->
            in_.last_nl <- Some info;
            loop (x :: aux)
        (* those tokens are inserted post tokenization *)
        | NEWLINE _
        | NEWLINES _ ->
            raise Impossible
        | other ->
            in_.passed <- aux @ in_.passed;
            in_.token <- other)
  in
  loop [ in_.token ]

(* ------------------------------------------------------------------------- *)
(* nextToken *)
(* ------------------------------------------------------------------------- *)

(** Consume and discard the next token. *)
let nextToken in_ =
  let lastToken = in_.token in
  adjustSepRegions lastToken in_;
  (* STILL?: if inStringInterpolation fetchStringPart else *)
  fetchToken in_;
  (* Insert NEWLINE or NEWLINES if
   * - we are after a newline
   * - we are within a { ... } or on toplevel (wrt sepRegions)
   * - the current token can start a statement and the one before can end it
   * insert NEWLINES if we are past a blank line, NEWLINE otherwise
   *)
  (* newline: *)
  (if
   afterLineEnd in_ && TH.inLastOfStat lastToken && TH.inFirstOfStat in_.token
   && (match in_.sepRegions with
      | []
      | RBRACE _ :: _ ->
          true
      | _ -> false)
   && (* STILL?: not applyBracePatch *)
   true
  then
   match () with
   (* STILL?: | _ when pastBlankLine in_ -> insertNL ~newlines:true in_ *)
   (* STILL?: | _ when TH.isLeadingInfixOperator *)
   (* CHECK: scala3: "Line starts with an operator that in future" *)
   | _ -> insertNL in_);
  postProcessToken in_;
  ()

let nextTokenAllow _next in_ =
  warning "nextTokenAllow: STILL?";
  nextToken in_

let skipToken in_ = nextToken in_
let init in_ = nextToken in_

(* Consume one token of the specified type, or signal an error if it is
 * not there *)
let accept t in_ =
  if not (in_.token =~= t) then error (spf "was expecting: %s" (T.show t)) in_;
  match t with
  | EOF _ -> ()
  | _ -> nextToken in_

(* ------------------------------------------------------------------------- *)
(* looking ahead part 2 *)
(* ------------------------------------------------------------------------- *)

let lookingAhead body in_ =
  (* CHECK: allowLeadingInfixOperators *)
  let in_' = copy_env in_ in
  nextToken in_';
  let res = body in_' in
  res

let lookingAhead2 body1 body2 in_ =
  (* CHECK: allowLeadingInfixOperators *)
  let in_' = copy_env in_ in
  nextToken in_';
  let res1 = body1 in_' in
  match in_'.token with
  | EOF _ -> false
  | _ ->
      nextToken in_';
      let res2 = body2 in_' in
      res1 && res2

(*****************************************************************************)
(* Special parsing  *)
(*****************************************************************************)
(* ------------------------------------------------------------------------- *)
(* case class: Check that we are parsing a case that is not part of case class or case object *)
(* ------------------------------------------------------------------------- *)

let nextTokNotClassOrObject =
  lookingAhead (fun in_ ->
      match in_.token with
      | Kclass _
      | Kobject _ ->
          false
      | _ -> true)

(* ------------------------------------------------------------------------- *)
(* newline: Newline management part2  *)
(* ------------------------------------------------------------------------- *)

(** {{{
 *  semi = nl {nl} | `;`
 *  nl  = `\n` // where allowed
 *  }}}
*)
let acceptStatSep in_ =
  in_
  |> with_logging "acceptStatSep" (fun () ->
         match in_.token with
         | NEWLINE _
         | NEWLINES _ ->
             nextToken in_
         | _ -> accept (SEMI ab) in_)

let acceptStatSepOpt in_ =
  if not (TH.isStatSeqEnd in_.token) then acceptStatSep in_

let newLineOpt in_ =
  match in_.token with
  | NEWLINE _ -> nextToken in_
  | _ -> ()

let newLinesOpt in_ =
  match in_.token with
  | NEWLINE _
  | NEWLINES _ ->
      nextToken in_
  | _ -> ()

let newLineOptWhenFollowedBy token in_ =
  match (in_.token, in_next_token in_.rest) with
  | NEWLINE _, Some x when x =~= token -> newLineOpt in_
  | _ -> ()

let newLineOptWhenFollowing ftok in_ =
  match (in_.token, in_next_token in_.rest) with
  | NEWLINE _, Some x when ftok x -> newLineOpt in_
  | _ -> ()

(* ------------------------------------------------------------------------- *)
(* Trailing commas  *)
(* ------------------------------------------------------------------------- *)
(* pad: trailing commas are _detected_ in separatedToken to not cause
 * separatedToken to call part another time, but they are _skipped_ in
 * inGroupers.
 *)

(** used by parser to distinguish pattern P(_*, p) from trailing comma.
 *  EOF is accepted for REPL, which can't look ahead past the current line.
*)
let isTrailingComma right in_ =
  in_.token =~= COMMA ab
  && lookingAhead
       (fun in_ ->
         afterLineEnd in_ && in_.token =~= right (* REPL: || token =~= EOF *))
       in_

(* advance past COMMA NEWLINE RBRACE (to whichever token is the matching
 * close bracket)
 *)
(* pad: this was returning a boolean in the original code *)
let skipTrailingComma right in_ =
  match in_.token with
  | COMMA _ when isTrailingComma right in_ ->
      (* SIP-27 Trailing Comma (multi-line only) support
       * If a comma is followed by a new line & then a closing paren,
       * bracket or brace
       * then it is a trailing comma and is ignored
       *)
      (* pad: why not skipToken? don't want side effects in nextToken? *)
      fetchToken in_
  | _ -> ()

(* ------------------------------------------------------------------------- *)
(* Context sensitive parsing  *)
(* ------------------------------------------------------------------------- *)
(* The implementation for parsing inside of patterns at points where
 * sequences are disallowed.
 *)
let noSeq f in_ =
  warning "noSeq: STILL?";
  f in_

(* The implementation for parsing inside of patterns at points where
 * sequences are allowed.
 *)
let seqOK f in_ =
  warning "seqOK: STILL?";
  f in_

(* The implementation of the context sensitive methods for parsing
 * outside of patterns.
 *)
let outPattern f in_ =
  warning "outPattern: STILL?";
  f in_

(*****************************************************************************)
(* Grammar helpers  *)
(*****************************************************************************)

let inGroupers left right body in_ =
  let lp = TH.info_of_tok in_.token in
  accept left in_;
  let res = body in_ in
  skipTrailingComma right in_;
  let rp = TH.info_of_tok in_.token in
  accept right in_;
  (lp, res, rp)

let inBraces f in_ =
  in_
  |> with_logging "inBraces" (fun () ->
         inGroupers (LBRACE ab) (RBRACE ab) f in_)

let inParens f in_ =
  in_
  |> with_logging "inParens" (fun () ->
         inGroupers (LPAREN ab) (RPAREN ab) f in_)

let inBrackets f in_ =
  in_
  |> with_logging "inBrackets" (fun () ->
         inGroupers (LBRACKET ab) (RBRACKET ab) f in_)

(* less: do actual error recovery? *)
let inBracesOrNil = inBraces

(** {{{ { `sep` part } }}}. *)
let separatedToken sep part in_ =
  (* CHECK: "separator cannot be a comma" *)
  in_
  |> with_logging
       (spf "separatedToken(%s)" (T.show sep))
       (fun () ->
         let ts = ref [] in
         while in_.token =~= sep do
           let ii = TH.info_of_tok in_.token in
           nextToken in_;
           let x = part ii in_ in
           ts += x
         done;
         List.rev !ts)

(** {{{ part { `sep` part } }}}. *)
let tokenSeparated separator part in_ =
  in_
  |> with_logging
       (spf "tokenSeparated(%s)" (T.show separator))
       (fun () ->
         let ts = ref [] in
         let x = part in_ in
         ts += x;
         let done_ = ref (not (in_.token =~= separator)) in
         while not !done_ do
           let skippable =
             separator =~= COMMA ab
             &&
             match in_.sepRegions with
             | [] -> false
             | head :: _ ->
                 (* usually an RPAREN, but also RBRACE in import! *)
                 isTrailingComma head in_
           in
           if not skippable then (
             nextToken in_;
             let x = part in_ in
             ts += x);
           done_ := (not (in_.token =~= separator)) || skippable
         done;
         List.rev !ts)

(* AST: Creates an actual Parens node (only used during parsing.) *)
let makeParens body in_ =
  inParens
    (fun in_ ->
      match in_.token with
      | RPAREN _ -> []
      | _ -> body in_)
    in_

(* Strip the artificial `Parens` node to create a tuple term Tree. *)
let stripParens x =
  (* AST: if Parens(ts) -> makeSafeTupleTerm(ts) *)
  x

(** {{{ tokenSeparated }}}, with the separator fixed to commas. *)
let commaSeparated part in_ = tokenSeparated (COMMA ab) part in_

(*****************************************************************************)
(* Parsing names  *)
(*****************************************************************************)

(* ------------------------------------------------------------------------- *)
(* Idents *)
(* ------------------------------------------------------------------------- *)

(* AST: Assumed to be TermNames *)
let ident in_ : ident =
  match TH.isIdent in_.token with
  | Some (s, info) ->
      nextToken in_;
      (s, info)
  | None -> error "expecting ident" in_

let rawIdent in_ : ident =
  (* ast: in.name *)
  ident in_

let identOrMacro in_ : ident =
  if TH.isMacro in_.token then ident in_ else rawIdent in_

let wildcardOrIdent in_ : ident =
  match in_.token with
  | USCORE ii ->
      nextToken in_;
      (* ast: nme.WILDCARD *)
      (AST.wildcard, ii)
  | _ -> ident in_

(* For when it's known already to be a type name. *)
let identForType in_ : ident =
  let x = ident in_ in
  (* ast: x.toTypeName *)
  x

(* ------------------------------------------------------------------------- *)
(* Selectors *)
(* ------------------------------------------------------------------------- *)

let selector in_ : ident =
  let id = ident in_ in
  (* ast: Select(t, id) *)
  id

let rec selectors ~typeOK in_ : dotted_ident =
  match in_.token with
  | Ktype ii when typeOK ->
      nextToken in_;
      (* AST: SingletonTypeTree(t) *)
      [ ("type", ii) ]
  | _ ->
      let t1 = selector in_ in
      if in_.token =~= DOT ab then (
        skipToken in_;
        t1 :: selectors ~typeOK in_)
      else [ t1 ]

(* ------------------------------------------------------------------------- *)
(* Paths *)
(* ------------------------------------------------------------------------- *)

(** {{{
 *   QualId ::= Id {`.` Id}
 *   }}}
*)
let qualId in_ : dotted_ident =
  (* ast: Ident(id) *)
  let id = ident in_ in
  match in_.token with
  | DOT _ ->
      skipToken in_;
      id :: selectors ~typeOK:false in_
  | _ -> [ id ]

(* Calls `qualId()` and manages some package state. *)
let pkgQualId in_ : dotted_ident =
  (* ast: if ... then inScalePackage = true *)
  let pkg = qualId in_ in
  newLineOptWhenFollowedBy (LBRACE ab) in_;
  (* ast: adjust currentPackage *)
  pkg

(** {{{
 *   MixinQualifier ::= `[` Id `]`
 *   }}}
*)
let mixinQualifierOpt in_ : ident bracket option =
  if in_.token =~= LBRACKET ab then Some (inBrackets identForType in_)
  else None (* ast: tpnme.EMPTY *)
